// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldBillingProvider Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_billing_provider, {"context":"red hat"})",
    "value": "red hat",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_billing_provider, {"context":"aws"})",
    "value": "aws",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_billing_provider, {"context":"azure"})",
    "value": "azure",
  },
]
`;

exports[`ToolbarFieldBillingProvider Component should handle updating sla through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "billing_provider",
        "type": "SET_QUERY",
        "value": "red hat",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldBillingProvider Component should handle updating sla through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_RESET_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "billing_provider",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldBillingProvider Component should render a basic component: basic 1`] = `
<Select
  alignment={
    {
      "position": "left",
    }
  }
  aria-label="t(curiosity-toolbar.placeholder_billing, {"context":"provider"})"
  data-test="toolbarFieldBillingProvider"
  onSelect={[Function]}
  options={
    [
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_billing_provider, {"context":"red hat"})",
        "value": "red hat",
      },
      {
        "isSelected": true,
        "title": "t(curiosity-toolbar.label_billing_provider, {"context":"aws"})",
        "value": "aws",
      },
      {
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_billing_provider, {"context":"azure"})",
        "value": "azure",
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder_billing, {"context":"provider"})"
  selectedOptions="aws"
/>
`;
